# timesfm-tabfm-app

./: .env.example  .gitignore  DATASET.md  LICENSE  README.md  app.py  outputs.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  manifest.json
data/samples/tabular/adult_income/: predict.csv  train.csv
data/samples/tabular/iris/: predict.csv  train.csv
data/samples/tabular/synthetic_classification/: predict.csv  train.csv
data/samples/tabular/synthetic_regression/: predict.csv  train.csv
data/samples/tabular/wine_quality_red/: predict.csv  (+1 more)
docs/tutorial/: zero_to_mastery.md
scripts/: download_datasets.py  setup_env.sh  smoke_e2e.py  warm_models.py
src/app_core/: __init__.py  artifacts.py  batch_io.py  batch_models.py  charts.py  config.py  covariate_providers.py  health.py  logging_config.py  lora_jobs.py  metrics.py  ollama_client.py  ollama_selector.py  pdf_export.py  portfolio_optimization.py  reporting.py  sentiment_service.py  tabfm_service.py  timesfm_advanced.py  timesfm_lora_adapters.py  timesfm_lora_data.py  timesfm_lora_runner.py  timesfm_service.py  validators.py
tests/: test_artifacts.py  test_batch_io.py  test_batch_models.py  test_charts.py  test_config.py  test_covariate_providers.py  test_health.py  test_lora_jobs.py  test_metrics.py  test_ollama_client.py  test_ollama_selector.py  test_pdf_export.py  test_portfolio_optimization.py  test_sentiment_service.py  test_tabfm_service.py  test_timesfm_advanced.py  test_timesfm_lora_adapters.py  test_timesfm_lora_data.py  test_timesfm_service.py  test_validators.py
(+3 files in other folders)
